--- a/index.css
+++ b/index.css
@@ -673,6 +673,15 @@ section {
     justify-content: space-evenly;
 }
 
+.row-md-4 {
+    width: 100%;
+    padding: 10px;
+    /*background-color: green;*/
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
 .project-box {
     height: fit-content;
     background-color: #bfd8d5;
@@ -971,7 +980,7 @@ section {
 }
 
 @media screen and (max-width: 880px) {
-    .row-md-2, .row-md-3 {
+    .row-md-2, .row-md-3, .row-md-4 {
         flex-direction: column;
         align-items: center;
     }
